--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Eduniti is your one-stop platform for study resources including notes, books, PYQs, and tutorials – everything students need, in one place.">
+    <meta name="keywords"
+        content="Eduniti, study notes, college books, previous year questions, PYQs, tutorials, student resources, education">
+    <meta name="author" content="Eduniti Team">
+
+    <!-- Open Graph Meta Tags (Facebook, LinkedIn) -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Eduniti 📚 – Study Smarter">
+    <meta property="og:description"
+        content="Access free notes, books, PYQs, and tutorials. Everything a student needs, all in one place.">
+    <meta property="og:image" content="https://yourdomain.com/preview-image.jpg">
+    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:site_name" content="Eduniti">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Eduniti 📚 – Study Smarter">
+    <meta name="twitter:description" content="Free study materials, books, and tutorials for students.">
+    <meta name="twitter:image" content="https://yourdomain.com/preview-image.jpg">
+    <meta name="twitter:site" content="@yourtwitterhandle">
+
+    <!-- Favicon and Theme Color -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#4a90e2">
+    
     <title>Eduniti</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
