--- a/index.html
+++ b/index.html
@@ -105,6 +105,29 @@
             <div class="ar"></div>
         </div>
         <div class="cont-2">
+            <div class="material"></div>
+            <div class="srch center" id="searchZone">
+                <div class="srch-img">
+                    <img src="avatar2.png" alt="image">
+                    <div class="srch-mss-box center">
+                        <div class="srch-mss">
+                            <h3>Lets find what you want?</h3>
+                            <h3>Want Notes, Books or PYQs</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="srch-sec center">
+                    <section class="search-bar center" id="searchBar">
+                        <div class="srch-logo"></div>
+                        <label for="searchInput">Search Here!</label>
+                        <input id="searchInput" type="search" placeholder="Search here...">
+                        <div class="resultbar">
+                            <ul id="results">
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+            </div>
             <div class="disd center">
                 <div class="disd-head">
                     <h2>Why to choose us?</h2>
