--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="line"></div>
                 </div>
-                <div class="team-sec2 center">
+                 <div class="team-sec2 center">
                     <div class="team-ctn center">
                         <div class="team-card center">
                             <div class="mem-logo-box">
@@ -123,60 +123,59 @@
                                 <h5>Developer</h5>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum officia corporis architecto labore quisquam delectus illum et molestias quis, in vel? Eius dolore accusantium aliquam.</p>
                             </div>
-                            <div class="mem-smp">
-                                <i class="fa-brands fa-discord"></i>
-                                <i class="fa-brands fa-linkedin"></i>
-                                <i class="fa-brands fa-instagram"></i>
-                                <i class="fa-brands fa-x-twitter"></i>
-                            </div>
-                        </div>
-                        <div class="team-card center">
-                            <div class="mem-logo-box">
-                                <div class="mem logo2"></div>
-                            </div>
-                            <div class="mem-about">
-                                <h3>Sahil Sherma</h3>
-                                <h5>Developer</h5>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis nemo dignissimos, quisquam molestiae nostrum tempora maxime fuga natus ipsa modi ea iste, similique et. Et!</p>
-                            </div>
-                            <div class="mem smp">
-                                <i class="fa-brands fa-discord"></i>
-                                <i class="fa-brands fa-linkedin"></i>
-                                <i class="fa-brands fa-instagram"></i>
-                                <i class="fa-brands fa-x-twitter"></i>
-                            </div>
-                        </div>
-                        <div class="team-card center">
-                            <div class="mem-logo-box">
-                                <div class="mem logo3"></div>
-                            </div>
-                            <div class="mem-about">
-                                <h3>Kartikey Kumar</h3>
-                                <h5>Developer</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium natus distinctio debitis quae! Nisi quia sapiente tempora laborum minima molestiae et. Expedita quisquam illo iste?</p>
-                            </div>
-                            <div class="mem-smp">
-                                <i class="fa-brands fa-discord"></i>
-                                <i class="fa-brands fa-linkedin"></i>
-                                <i class="fa-brands fa-instagram"></i>
-                                <i class="fa-brands fa-x-twitter"></i>
-                            </div>
-                        </div>
-                        <div class="team-card center">
-                            <div class="mem-logo-box center">
-                                <div class="mem logo4"></div>
-                            </div>
-                            <div class="mem-about">
-                                <h3>Earthdeep</h3>
-                                <h5>Developer</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquid fugit suscipit quod. Maiores illo ipsa reiciendis, id eos aut asperiores unde voluptate sint voluptates.</p>
-                            </div>
                             <div class="mem-smp center">
                                 <i class="fa-brands fa-discord"></i>
                                 <i class="fa-brands fa-linkedin"></i>
                                 <i class="fa-brands fa-instagram"></i>
                                 <i class="fa-brands fa-x-twitter"></i>
                             </div>
+                        </div>
+                        <div class="team-card center">
+                            <header class="mem-logo-box">
+                                <div class="mem logo2"></div>
+                            </header>
+                            <div class="mem-about">
+                                <h3>Sahil Sharma</h3>
+                                <h5>Developer</h5>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum officia corporis architecto labore quisquam delectus illum et molestias quis, in vel? Eius dolore accusantium aliquam.</p>
+                            </div>
+                            <footer class="mem-smp center">
+                                <i class="fa-brands fa-discord"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </footer>
+                        </div>
+                        <div class="team-card center">
+                            <header class="mem-logo-box">
+                                <div class="mem logo3"></div>
+                            </header>
+                            <div class="mem-about">
+                                <h3>Kartikey Kumar</h3>
+                                <h5>Developer</h5>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum officia corporis architecto labore quisquam delectus illum et molestias quis, in vel? Eius dolore accusantium aliquam.</p>
+                            </div>
+                            <footer class="mem-smp center">
+                                <i class="fa-brands fa-discord"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </footer>
+                        </div>
+                        <div class="team-card center">
+                            <header class="mem-logo-box center">
+                                <div class="mem logo4"></div>
+                            </header>
+                            <div class="mem-about">
+                                <h3>Earthdeep</h3>
+                                <h5>Developer</h5>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum officia corporis architecto labore quisquam delectus illum et molestias quis, in vel? Eius dolore accusantium aliquam.</p>
+                            <footer class="mem-smp center">
+                                <i class="fa-brands fa-discord"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </footer>
                         </div>
                     </div>
                 </div>
