--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
                         Lets learn.
                     </h3>
                 </div>
-                <img src="image7.png" alt="image" title="avatar">
                 <div class="ind center">
                     <div class="ind-box">
                         <h3>Scroll Down</h3>
@@ -158,14 +157,109 @@
                             </div>
                         </div>
                     </div>
-                    <div class="coder-sec">
-                        <div class="cod-card"></div>
-                        <div class="cod-card"></div>
-                        <div class="cod-card"></div>
-                        <div class="cod-card"></div>
-                        <div class="cod-card"></div>
-                        <div class="cod-card"></div>
-                        <div class="cod-card"></div>
+                </div>
+            </div>
+            <div class="material-sec2 center">
+                <h2>Coder Section</h2>
+                <div class="coder-sec center">
+                    <div class="cod-card">
+                        <div class="code-logo codelogo1"></div>
+                        <div class="code-info">
+                            <h2>HTML Tutorial</h2>
+                            <p>The word hypertext markup language is composed of the words “hypertext” and “mar...</p>
+                        </div>
+                        <div class="code-buttons">
+                           <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo2"></div>
+                        <div class="code-info">
+                            <h2>CSS Tutorial</h2>
+                            <p>CSS stands for Cascading Style Sheets. It describes how HTML elements are to be ...</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo3"></div>
+                        <div class="code-info adjust">
+                            <h2>JavaScript Tutorial</h2>
+                            <p>JavaScript is a lightweight, cross-platform, OOP language.</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo4"></div>
+                        <div class="code-info">
+                            <h2>Python Tutorial</h2>
+                            <p>Python is a high-level, interpreted, general-purpose programming language.</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo5"></div>
+                        <div class="code-info">
+                            <h2>C Tutorial</h2>
+                            <p>C language is considered as the mother language of all programming languages. It...</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo6"></div>
+                        <div class="code-info">
+                            <h2>React JS Tutorial</h2>
+                            <p>React is an open-source front-end JavaScript library. This series will cover Rea..</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo7"></div>
+                        <div class="code-info">
+                            <h2>Java Tutorial</h2>
+                            <p>Java is a programming language, created in 1995. More than 3 billion devices run...</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo8"></div>
+                        <div class="code-info">
+                            <h2>C++ Tutorial</h2>
+                            <p>C++ is a cross-platform language that can be used to create high-performance app..</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
+                    </div>
+                    <div class="cod-card">
+                        <div class="code-logo codelogo9"></div>
+                        <div class="code-info">
+                            <h2>PHP Tutorial</h2>
+                            <p>The term PHP is an acronym for PHP: Hypertext Preprocessor. It is a server side ...</p>
+                        </div>
+                        <div class="code-buttons">
+                            <a href="#">Start Learning</a>
+                            <a href="#">Want Notes</a>
+                        </div>
                     </div>
                 </div>
             </div>
