--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="ar"></div>
         </div>
         <div class="cont-2">
-            <div class="material-sec center">
+            <div class="material-sec1 center">
                 <h3>General Zone</h3>
                 <div class="material-ctn">
                     <div class="general-sec center">
