--- a/index.html
+++ b/index.html
@@ -52,31 +52,22 @@
             <nav aria-label="Primary navigation">
                 <ul class="primary-navigation center" id="primary-navigation" data-visible="false">
                     <li class="border menu-item sd">
-                        <a href="#HomeZone">Home</a>
+                        <a href="https://ryoiki-tenkai-realm.github.io/Eduniti/">Home</a>
                     </li>
                     <li class="border menu-item sd">
                         <a href="#MaterialZone">Materials</a>
                     </li>
-                    <li class="border menu-item sd ntp">
-                        <a href="#HomeZone">Contact Us</a>
-                    </li>
-                    <li class="hover1 border menu-item rmd">
-                        <a href="#notesZone">Notes</a>
-                    </li>
-                    <li class="hover2 border menu-item rmd">
-                        <a href="#booksZone">Books</a>
-                    </li>
-                    <li class="hover border menu-item rmd">
-                        <a href="#pyqsZone">Pyqs</a>
-                    </li>
                     <li class="hover4 border menu-item rmd">
-                        <a href="#tutorialZone">Tutorials</a>
-                    </li>
-                    <li class="search-section border menu-item">
-                        <a href="#searchZone"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></a>
+                        <a href="https://sbtelms.bihar.gov.in/login/index.php">Tutorials</a>
                     </li>
                     <li class="aboutus border menu-item sd">
                         <a href="#aboutZone">About Us</a>
+                    </li>
+                    <li class="aboutus border menu-item sd">
+                        <a href="#codingSection">Coder Zone</a>
+                    </li>
+                    <li class="search-section border menu-item">
+                        <a href="#searchZone"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></a>
                     </li>
                 </ul>
             </nav>
@@ -104,7 +95,7 @@
             <div class="ar"></div>
         </div>
         <div class="cont-2">
-            <div class="material-sec1 center">
+            <div class="material-sec1 center" id="MaterialZone">
                 <h3>General Zone</h3>
                 <div class="material-ctn">
                     <div class="general-sec center">
@@ -159,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="material-sec2 center">
+            <div class="material-sec2 center" id="codingSection">
                 <h2>Coder Section</h2>
                 <div class="coder-sec center">
                     <div class="cod-card">
@@ -263,7 +254,7 @@
                     </div>
                 </div>
             </div>
-            <div class="team-sec">
+            <div class="team-sec" id="aboutZone">
                 <div class="team-sec1">
                     <div class="team">
                         <p>OUR TEAM MEMBERS</p>
