--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                     <li class="border menu-item sd">
                         <a href="https://ryoiki-tenkai-realm.github.io/Eduniti/">Home</a>
                     </li>
-                    <li class="border menu-item sd">
+                    <li class="border menu-item">
                         <a href="#MaterialZone">Materials</a>
                     </li>
-                    <li class="hover4 border menu-item rmd">
+                    <li class="hover4 border menu-item">
                         <a href="https://sbtelms.bihar.gov.in/login/index.php">Tutorials</a>
                     </li>
-                    <li class="aboutus border menu-item sd">
+                    <li class="aboutus border menu-item">
                         <a href="#aboutZone">About Us</a>
                     </li>
-                    <li class="aboutus border menu-item sd">
+                    <li class="aboutus border menu-item">
                         <a href="#codingSection">Coder Zone</a>
                     </li>
                     <li class="search-section border menu-item">
