--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
             </button>
             <nav aria-label="Primary navigation">
                 <ul class="primary-navigation center" id="primary-navigation" data-visible="false">
-                    <li class="border menu-item sd">
+                    <li class="border menu-item">
                         <a href="https://ryoiki-tenkai-realm.github.io/Eduniti/">Home</a>
                     </li>
                     <li class="border menu-item">
                         <a href="#MaterialZone">Materials</a>
                     </li>
-                    <li class="hover4 border menu-item">
+                    <li class="border menu-item">
                         <a href="https://sbtelms.bihar.gov.in/login/index.php">Tutorials</a>
                     </li>
-                    <li class="aboutus border menu-item">
+                    <li class="border menu-item">
                         <a href="#aboutZone">About Us</a>
                     </li>
-                    <li class="aboutus border menu-item">
-                        <a href="#codingSection">Coder Zone</a>
+                    <li class="border menu-item">
+                        <a href="#codingSection" title="coder">Coder Zone</a>
                     </li>
                     <li class="search-section border menu-item">
                         <a href="#searchZone"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></a>
